# hello-yew

./: .gitignore  Cargo.toml  Makefile.toml  README.md
src/: app.rs  lib.rs
src/components/: product_card.rs
src/pages/: home.rs  product_detail.rs
www/: index.html
www/products/: 1.json  2.json  products.json
