[package]
name = "rustmart"
version = "0.1.0"
authors = ["Cory Stegelmeier <cstegel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
log = "0.4.11"
yew = "0.17"
yew-router = "0.14.0"
wasm-bindgen = "0.2"
wasm-logger = "0.2.0"
anyhow = "1.0.32"
serde = { version = "1.0", features = ["derive"] }
console_error_panic_hook = "0.1"